After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 668372 - Adding a second Gmail account lists this account twice
Adding a second Gmail account lists this account twice
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: Accounts
3.3.x
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2012-01-20 20:24 UTC by Bilal Shahid
Modified: 2012-01-24 12:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
accounts-dialog: no more need to manually prepare TpAccount (1.50 KB, patch)
2012-01-24 11:06 UTC, Guillaume Desmottes
committed Details | Review
accounts_dialog_get_account_iter: use the COL_ACCOUNT directly (1.25 KB, patch)
2012-01-24 11:07 UTC, Guillaume Desmottes
committed Details | Review
accounts-dialog: don't add newly created account twice (4.67 KB, patch)
2012-01-24 11:07 UTC, Guillaume Desmottes
committed Details | Review

Description Bilal Shahid 2012-01-20 20:24:38 UTC
Originally reported at:
  https://bugs.launchpad.net/bugs/919377

when we are adding an other account of google mail than when we entered the account information like id and password than when we press enter than the account shown twice see the video.
and one is shown online and other is offline.
video attached in downstream..

ProblemType: Bug
DistroRelease: Ubuntu 12.04
Package: empathy 3.3.4-0ubuntu1
ProcVersionSignature: Ubuntu 3.2.0-9.16-generic 3.2.1
Uname: Linux 3.2.0-9-generic i686
ApportVersion: 1.91-0ubuntu1
Architecture: i386
Date: Sat Jan 21 01:11:56 2012
InstallationMedia: Ubuntu 12.04 LTS "Precise Pangolin" - Alpha i386 (20111211)
ProcEnviron:
 PATH=(custom, no user)
 LANG=en_US.UTF-8
 SHELL=/bin/bash
SourcePackage: empathy
UpgradeStatus: Upgraded to precise on 2012-01-20 (0 days ago)
Comment 1 André Klapper 2012-01-20 22:33:34 UTC
In short: Adding a second GMail account under "Messaging & VoIP Accounts" makes this second account to be listed twice in the left pane, once offline, once online.
Comment 2 Bilal Shahid 2012-01-20 22:51:47 UTC
yes.you are absolutely right.
Comment 3 Guillaume Desmottes 2012-01-23 15:13:33 UTC
Are the 2 gmail accounts connected in any way or are they just 2 different accounts?
Could you please post the output of "mc-tool list" before and after adding the account?
Comment 4 Guillaume Desmottes 2012-01-24 09:56:10 UTC
Ok, I managed to reproduce that. It happens when adding any kind of new account using empathy-accounts. Probably a regression from the recent refactoring.
Comment 5 Guillaume Desmottes 2012-01-24 11:06:58 UTC
Created attachment 205959 [details] [review]
accounts-dialog: no more need to manually prepare TpAccount

The factory does it for us now.
Comment 6 Guillaume Desmottes 2012-01-24 11:07:01 UTC
Created attachment 205960 [details] [review]
accounts_dialog_get_account_iter: use the COL_ACCOUNT directly

There is no point using the EmpathyAccountSettings.
Comment 7 Guillaume Desmottes 2012-01-24 11:07:04 UTC
Created attachment 205961 [details] [review]
accounts-dialog: don't add newly created account twice

It used to be created once in the accounts_dialog_account_validity_changed_cb
callback and once when the new account dialog is done.

This change is actually good because now accounts are always added to the
model using the same code path.
Comment 8 Danielle Madeley 2012-01-24 11:44:45 UTC
Review of attachment 205959 [details] [review]:

++
Comment 9 Danielle Madeley 2012-01-24 11:46:26 UTC
Review of attachment 205960 [details] [review]:

++
Comment 10 Danielle Madeley 2012-01-24 11:47:29 UTC
Review of attachment 205961 [details] [review]:

++
Comment 11 Guillaume Desmottes 2012-01-24 12:25:17 UTC
Attachment 205959 [details] pushed as a58af6c - accounts-dialog: no more need to manually prepare TpAccount
Attachment 205960 [details] pushed as ae60dd2 - accounts_dialog_get_account_iter: use the COL_ACCOUNT directly
Attachment 205961 [details] pushed as 8256667 - accounts-dialog: don't add newly created account twice