accounts-dialog: no more need to manually prepare TpAccount

The factory does it for us now.

https://bugzilla.gnome.org/show_bug.cgi?id=668372